src/infrastructure/web/ui/styles/main.scss
@use '~bootstrap/scss/bootstrap';

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Playfair Display', Georgia, 'Times New Roman', serif;
}

input:invalid:not(:placeholder-shown) + .invalid-feedback {
  display: block;
}

form:invalid button[type='submit'] {
  color: var(--bs-btn-disabled-color);
  pointer-events: none;
  background-color: var(--bs-btn-disabled-bg);
  border-color: var(--bs-btn-disabled-border-color);
  opacity: var(--bs-btn-disabled-opacity);
}

